Feat: PT_BR localization

--- a/common/src/main/resources/assets/cobblemon/lang/pt_br.json
+++ b/common/src/main/resources/assets/cobblemon/lang/pt_br.json
@@ -258,9 +258,9 @@
   "item.zamega.ange": "Ange",
   "tooltip.zamega.ange.tooltip": "Um cristal que contém uma energia condenada",
   "creativeTab.zamegas.tab": "ZA Megas",
-  "cobblemon.battle.start.": "O %1$s oponente foi hipnotizado por Malamar",
-  "cobblemon.battle.activate.": "O %1$s oponente se apaixonou",
-  "cobblemon.battle.cant.": "O %1$s oponente não pôde atacar, ele está imobilizado pelo amor",
+  "cobblemon.battle.start.": "O oponente %1$s foi hipnotizado por Malamar",
+  "cobblemon.battle.activate.": "O oponente %1$s se apaixonou",
+  "cobblemon.battle.cant.": "O oponente %1$s não pôde atacar, ele está imobilizado pelo amor",
   "cobblemon.battle.heal.eternalrage": "%1$s está extraindo energia",
   "cobblemon.battle.heal.eternalrageplus": "%1$s está extraindo energia",
   "cobblemon.battle.damage.eternalrage": "O oponente %1$s está ficando mais fraco",
